@@ -1,3 +1,8 @@
+2011-06-10  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/diagMatrix.R (Cspdiagprod, diagCspprod): fixup for symmetric
+	sparse, and non constant-diagonal.
+
 2011-05-20  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/dsCMatrix.R (determinant(<dsCMatrix>): fix for Matrix(0, 1) case.
